...
    <string name="tasks_action_move_down">Move down</string>
    <string name="tasks_field_status">Status</string>
    <string name="tasks_field_due_date">Due date</string>
    <string name="tasks_field_rating">Rating</string>
    <string name="tasks_status_to_do">To Do</string>
    <string name="tasks_status_in_progress">In Progress</string>
    <string name="tasks_status_done">Done</string>
    <string name="tasks_status_count">%1$s (%2$d)</string>
    <string name="tasks_column_empty">No tasks</string>
    <string name="tasks_list_empty">There are no tasks yet</string>
    <string name="tasks_rating_rate">Rate</string>
    <string name="tasks_rating_levels">Rating reactions</string>
    <string name="tasks_rating_levels_hint">Reactions go from the worst to the best. Removing a reaction also removes it from rated tasks.</string>
...
